--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,14 @@
 
 @theme {
   --color-primary: #5f6fff;
+  gridTemplateColumns:{
+    `auto`:`repeat(auto-fill,minmax(200px,1fr))`
+  }
 }
+
 .active hr{
   @apply block
+}
+::-webkit-scrollbar{
+  @apply hidden
 }
