--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,12 @@
 
 @theme {
   --color-primary: #5f6fff;
-  gridTemplateColumns:{
-    `auto`:`repeat(auto-fill,minmax(200px,1fr))`
-  }
 }
 
-.active hr{
-  @apply block
+.active hr {
+  @apply block;
 }
-::-webkit-scrollbar{
-  @apply hidden
+
+::-webkit-scrollbar {
+  display: none;
 }
